--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 	"description": "Utilities for WordPress",
 	"license": "MIT",
 	"homepage": "https://wppress.net/",
+	"minimum-stability": "dev",
 	"authors": [
 		{
 			"name": "WPPress",
